Clarify how aliases show up

--- a/templates/wheretofindme/edit_aliases.html
+++ b/templates/wheretofindme/edit_aliases.html
@@ -9,7 +9,9 @@
 </p>
 <p class="text-muted text-justify">
   Your first alias is the default, used throughout the site to identify you.
-  You can't remove it, but you can change it.
+  You can’t remove it, but you can change it. If you make yourself searchable,
+  people can find you if they know any of your aliases. All your aliases are
+  visible to anyone who looks at your profile.
 </p>
 
 
