Style alias list a bit

--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -22,7 +22,7 @@
 </h1>
 
 {% if object.other_aliases %}
-<p class="text-muted">
+<p class="col-md-4 offset-md-4 text-muted">
   a.k.a. {{ object.other_aliases|join:", " }}.
 </p>
 {% endif %}
