--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
+    {% block "meta" %}{% endblock "meta" %}
 
     <title>Where to find me</title>
 
