--- a/templates/about.html
+++ b/templates/about.html
@@ -23,6 +23,8 @@
   in touch</a> with me and I'll turn our conversation into a ticket.
 </p>
 <p class="text-justify">
-  Icons from FontAwesome. Color scheme from Bootswatch's "Minty" theme.
+  Icons from FontAwesome. Color scheme from Bootswatch's "Minty" theme. Logo
+  designed by <a href="{% url "user-profile" slug='mirisuzanne' %}">Miriam
+  Suzanne</a>.
 </p>
 {% endblock "main" %}
