--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,9 @@
       {% endif %}
 
       {% block "main" %}
+      <div class="text-center">
+        <img src="{% static 'images/logo.png' %}" alt="Where to Find Me logo" class="hero-logo">
+      </div>
       <h1 class="display-4 text-center">Where are you?</h1>
       <p class="lead text-justify">
         As closed social media sites never have our best interests at heart,
