Fix active toggle in favstar template

--- a/templates/wheretofindme/follower_list.html
+++ b/templates/wheretofindme/follower_list.html
@@ -33,7 +33,7 @@
       </div>
       {% else %}
       <div class="favstar"
-           data-active="true"
+           data-active="false"
            data-username="{{ object.username }}"
            data-nickname="{% nickname object %}"
            >
