Add basic abuse and deletion policy
See #27.

--- a/templates/tos.html
+++ b/templates/tos.html
@@ -26,4 +26,26 @@
 <p class="text-justify">
   Please be kind.
 </p>
+<h2 class="text-center" id="abuse-and-deletion">Abuse and Deletion</h2>
+<p class="text-justify">
+  If you find that someone has claimed they own an identity that's actually
+  yours, please
+  <a
+    href="mailto:admin@wheretofind.me?subject=Where%20to%20Find%20Me%20removal%20request"
+    >contact us</a> and we will try to resolve the
+  issue.
+</p>
+<p class="text-justify">
+  We will ask you to demonstrate to our satisfaction that you actually control
+  the identity in question, and once you do, we will take down the identity,
+  and send a warning to the user who posted it. We will typically ask you to
+  confirm ownership by asking you to post a short innocuous random phrase to
+  that identity, but may change this to some other technique if the particular
+  service constrains your ability to do so.
+</p>
+<p class="text-justify">
+  If a user repeatedly abuses this policy, either by posting identities they
+  don't control, or by claiming ownership spuriously, we reserve the right to
+  restrict or block their access to Where to Find Me.
+</p>
 {% endblock "main" %}
