--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -91,4 +91,11 @@
   <em><small>they are stealthy, and have left no trace</small></em>
 </div>
 {% endif %}
+
+<p class="col-md-8 offset-md-2 text-muted">
+  <small>Added without your consent? Please
+  <a
+    href="mailto:admin@wheretofind.me?subject=Where%20to%20Find%20Me%20removal%20request"
+    >contact us</a> to remove this entry.</small>
+</p>
 {% endblock "main" %}
