--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,16 @@
               <input class="btn btn-link" type="submit" value="Sign out">
             </form>
             {% else %}
+            <form class="form-inline" action="{% url "search" %}">
+              <div class="input-group" role="group" aria-label="Search group">
+                <input class="form-control" type="search" placeholder="Search" name="q" aria-label="Search">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-success" type="submit">
+                    <span class="fas fa-search"></span>
+                  </button>
+                </div>
+              </div>
+            </form>
             <li class="nav-item">
               <a class="nav-link" href="{% url "django_registration_register" %}">Sign up</a>
             </li>
