--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -20,24 +20,29 @@
       <div class="form-group row">
         <label for="name-{{ identity.id }}" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" id="name-{{ identity.id }}" name="name" value="{{ identity.name }}">
+          <input type="text" class="form-control" id="name-{{ identity.id }}" name="name" value="{{ identity.name }}" placeholder="My blog…">
         </div>
         <div class="col-sm-1">
-          <button class="btn delete btn-outline-danger float-right">
+          <button type="button" class="btn delete btn-outline-danger float-right">
             <span class="fas fa-minus-circle"></span>
           </button>
         </div>
       </div>
       <div class="form-group row">
         <label for="url-{{ identity.id }}" class="col-sm-2 col-form-label">URL</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="url-{{ identity.id }}" name="url" value="{{ identity.url }}">
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="url-{{ identity.id }}" name="url" value="{{ identity.url }}" placeholder="https://example.com/">
+        </div>
+        <div class="col-sm-1">
+          <button type="button" class="btn btn-link float-right expand-identity">
+            <span class="fas fa-ellipsis-h"></span>
+          </button>
         </div>
       </div>
     </div>
   </div>
   {% endfor %}
-  <button class="btn add-identity btn-outline-primary float-right">
+  <button type="button" class="btn add-identity btn-outline-primary float-right">
     <span class="fas fa-plus-circle"></span>
   </button>
 </form>
