--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -72,13 +72,13 @@
             {{ identity.name }}
             {% if object.should_show_quality %}
             <div class="quality-indicator">
-              <span class="quality-{{ identity.quality }} fas fa-thermometer-{% if identity.quality == 0 %}empty{% elif identity.quality == 1 %}half{% elif identity.quality == 2 %}full{% endif %}"></span>
+              <img class="quality-{{ identity.quality }}" src="/static/images/quality-{% if identity.quality == 0 %}low{% elif identity.quality == 1 %}mid{% elif identity.quality == 2 %}high{% endif %}.png" alt="Quality {{ identity.quality }}">
             </div>
             {% endif %}
             {% if identity.tag %}
             <div class="tag-indicator">
               <small class="text-muted">
-                <span class="badge badge-pill badge-info">{{ identity.tag }}</span>
+                <span class="badge badge-pill badge-primary">{{ identity.tag }}</span>
               </small>
             </div>
             {% endif %}
@@ -90,13 +90,13 @@
           {{ identity.name }}: {{ identity.url }}
           {% if object.should_show_quality %}
           <div class="quality-indicator">
-            <span class="quality-{{ identity.quality }} fas fa-thermometer-{% if identity.quality == 0 %}empty{% elif identity.quality == 1 %}half{% elif identity.quality == 2 %}full{% endif %}"></span>
+            <img class="quality-{{ identity.quality }}" src="/static/images/quality-{% if identity.quality == 0 %}low{% elif identity.quality == 1 %}mid{% elif identity.quality == 2 %}high{% endif %}.png" alt="Quality {{ identity.quality }}">
           </div>
           {% endif %}
           {% if identity.tag %}
           <div class="tag-indicator">
             <small class="text-muted">
-              <span class="badge badge-pill badge-info">{{ identity.tag }}</span>
+              <span class="badge badge-pill badge-primary">{{ identity.tag }}</span>
             </small>
           </div>
           {% endif %}
