Add page titles everywhere
Fixes #67.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block "title" %}About | {% endblock "title" %}
 
 {% block "main" %}
 <h1 class="text-center">About</h1>
