--- a/templates/django_registration/activation_complete.html
+++ b/templates/django_registration/activation_complete.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block "title" %}Activated! | {% endblock "title" %}
+
 {% block "main" %}
 <h1>Activated!</h1>
 <p>You're all set. Do you wanna <a href="{% url "login" %}">sign in</a>?</p>
