--- a/templates/django_registration/registration_complete.html
+++ b/templates/django_registration/registration_complete.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block "title" %}Registration complete | {% endblock "title" %}
+
 {% block "main" %}
 <h1>Registration complete</h1>
 <p>Just click "confirm" in that email you should be getting.</p>
