--- a/templates/wheretofindme/edit_aliases.html
+++ b/templates/wheretofindme/edit_aliases.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block "title" %}Edit aliases | {% endblock "title" %}
 
 {% block "main" %}
 <h1>What do people call you?</h1>
