--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block "title" %}Edit locations | {% endblock "title" %}
 
 {% block "main" %}
 <h1>Where are you?</h1>
