--- a/templates/wheretofindme/follow_list.html
+++ b/templates/wheretofindme/follow_list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load favstar %}
 
+{% block "title" %}Your follows | {% endblock "title" %}
+
 {% block "main" %}
 <h1>Who do I follow?</h1>
 <div>
