--- a/templates/500.html
+++ b/templates/500.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block "title" %}Server error | {% endblock "title" %}
 
 {% block "main" %}
 <h1 class="text-center">Whoops.</h1>
