--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
     {% block "meta" %}{% endblock "meta" %}
 
-    <title>Where to find me</title>
+    <title>{% block "title" %}{% endblock "title" %}Where to find me</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Custom styles for this template -->
