--- a/templates/django_registration/activation_failed.html
+++ b/templates/django_registration/activation_failed.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block "title" %}Activation failed | {% endblock "title" %}
+
 {% block "main" %}
 <h1>Alas!</h1>
 <p>Something went wrong. Please get in touch with us and we'll sort it out.</p>
