--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
+
 {% load crispy_forms_tags %}
+
+{% block "title" %}Sign up | {% endblock "title" %}
 
 {% block "main" %}
 <h1>Sign up</h1>
