--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+
+{% block "title" %}Sign in | {% endblock "title" %}
+
 {% block "main" %}
 <h1>Sign in</h1>
 <form method="post" action="{% url "login" %}">
