--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block "title" %}Change your password | {% endblock "title" %}
+
 {% block "main" %}
 <h1>
   Change your password
