--- a/templates/tos.html
+++ b/templates/tos.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block "title" %}Terms of Service | {% endblock "title" %}
 
 {% block "main" %}
 <h1 class="text-center">Terms of Service</h1>
