--- a/templates/wheretofindme/follower_list.html
+++ b/templates/wheretofindme/follower_list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load favstar %}
 
+{% block "title" %}Your followers | {% endblock "title" %}
+
 {% block "main" %}
 <h1>Who follows me?</h1>
 <div>
