--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static favstar %}
 
+{% block "title" %}{{ object.primary_alias }} | {% endblock "title" %}
+
 {% block "meta" %}
 <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 {% endblock "meta" %}
