Add OpenGraph tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    {% block "opengraph" %}
+    {% endblock "opengraph" %}
     <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
     {% block "meta" %}{% endblock "meta" %}
 
