Change from "business card" to "calling card"

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
       <p class="lead text-justify">
         Maybe a layer of indirection can save the day. Point people at your
         page on <code>wheretofind.me</code> and they can find you no matter
-        what sites you're using these days. It's like a business card for your
+        what sites you're using these days. It's like a calling card for your
         social media presence.
       </p>
       {% if not user.is_authenticated %}
