--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="{{ here }}" />
 <meta property="og:image" content="{% static 'images/logo-50.png' %}" />
 <meta property="og:image:alt" content="Where to Find Me logo" />
-<meta property="og:description" content="A business card for the internet." />
+<meta property="og:description" content="A calling card for the internet." />
 {% endblock "opengraph" %}
 
 {% block "main" %}
