Use smallest possible versions of logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     {% block "opengraph" %}
     {% endblock "opengraph" %}
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/logo-50.png' %}"/>
     {% block "meta" %}{% endblock "meta" %}
 
     <title>{% block "title" %}{% endblock "title" %}Where to find me</title>
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom shadow-sm">
       <a class="navbar-brand flex-grow-1" href="/">
-        <img src="{% static 'images/logo.png' %}" class="img-fluid" alt="Where to Find Me logo">
+        <img src="{% static 'images/logo-50.png' %}" class="img-fluid" alt="Where to Find Me logo">
         Where to find me
       </a>
 
@@ -96,7 +96,7 @@
 
       {% block "main" %}
       <div class="text-center">
-        <img src="{% static 'images/logo.png' %}" alt="Where to Find Me logo" class="hero-logo">
+        <img src="{% static 'images/logo-125.png' %}" alt="Where to Find Me logo" class="hero-logo">
       </div>
       <h1 class="display-4 text-center">Where are you?</h1>
       <p class="lead text-justify">
